Everything but draw2!

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
@@ -148,7 +148,7 @@
                               <Component id="sideTieLengthSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideTieWidthSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideTieGapSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
-                              <Component id="sideLineLabel" linkSize="47" alignment="1" max="32767" attributes="0"/>
+                              <Component id="sidelineLabel" linkSize="47" alignment="1" max="32767" attributes="0"/>
                           </Group>
                       </Group>
                   </Group>
@@ -163,7 +163,7 @@
                           <Group type="103" groupAlignment="1" attributes="0">
                               <Group type="102" attributes="0">
                                   <Group type="103" groupAlignment="3" attributes="0">
-                                      <Component id="sideLineLabel" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="sidelineLabel" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="mainlineLabel" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="optionLabel" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
@@ -277,7 +277,7 @@
               <Connection code="Bundle.getMessage(&quot;MainlineLabelText&quot;)" type="code"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="Bundle.getMessage(&quot;MainlineToolTip&quot;)" type="code"/>
+              <Connection code="Bundle.getMessage(&quot;MainlineColumnToolTip&quot;)" type="code"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[32767, 32767]"/>
@@ -1234,7 +1234,7 @@
             </DimensionLayout>
           </Layout>
         </Container>
-        <Component class="javax.swing.JLabel" name="sideLineLabel">
+        <Component class="javax.swing.JLabel" name="sidelineLabel">
           <Properties>
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Lucida Grande" size="13" style="1"/>
@@ -1243,7 +1243,7 @@
               <Connection code="Bundle.getMessage(&quot;SidelineLabelText&quot;)" type="code"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="Bundle.getMessage(&quot;SideLineToolTip&quot;)" type="code"/>
+              <Connection code="Bundle.getMessage(&quot;SidelineToolTip&quot;)" type="code"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[32767, 32767]"/>
