--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
@@ -1243,7 +1243,7 @@
               <Connection code="Bundle.getMessage(&quot;SidelineLabelText&quot;)" type="code"/>
             </Property>
             <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="Bundle.getMessage(&quot;SidelineToolTip&quot;)" type="code"/>
+              <Connection code="Bundle.getMessage(&quot;SidelineColumnToolTip&quot;)" type="code"/>
             </Property>
             <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[32767, 32767]"/>
