--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
@@ -120,7 +120,7 @@
                       <Component id="mainlineLabel" linkSize="47" max="32767" attributes="0"/>
                       <Component id="mainRailCountSpinner" linkSize="47" max="32767" attributes="0"/>
                       <Component id="mainRailWidthSpinner" linkSize="47" max="32767" attributes="0"/>
-                      <Component id="sideRailGapSpinner" linkSize="47" max="32767" attributes="0"/>
+                      <Component id="mainRailGapSpinner" linkSize="47" max="32767" attributes="0"/>
                       <Component id="mainRailColorButton" linkSize="47" max="32767" attributes="0"/>
                       <Component id="mainBlockLineWidthSpinner" linkSize="47" max="32767" attributes="0"/>
                       <Component id="mainBallastWidthSpinner" linkSize="47" max="32767" attributes="0"/>
@@ -140,7 +140,7 @@
                           <Group type="103" groupAlignment="0" max="-2" attributes="0">
                               <Component id="sideRailCountSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideRailWidthSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
-                              <Component id="mainRailGapSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
+                              <Component id="sideRailGapSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideRailColorButton" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideBlockLineWidthSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
                               <Component id="sideBallastWidthSpinner" linkSize="47" alignment="1" max="32767" attributes="0"/>
@@ -182,8 +182,8 @@
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="3" attributes="0">
                                       <Component id="railGapLabel" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
-                                      <Component id="sideRailGapSpinner" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
                                       <Component id="mainRailGapSpinner" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
+                                      <Component id="sideRailGapSpinner" linkSize="42" alignment="3" min="-2" max="-2" attributes="0"/>
                                   </Group>
                                   <EmptySpace max="-2" attributes="0"/>
                                   <Group type="103" groupAlignment="0" attributes="0">
@@ -463,32 +463,6 @@
             </Property>
           </Properties>
         </Component>
-        <Component class="javax.swing.JSpinner" name="mainRailGapSpinner">
-          <Properties>
-            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
-              <SpinnerModel initial="1" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
-            </Property>
-            <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="Bundle.getMessage(&quot;MainRailGapToolTip&quot;)" type="code"/>
-            </Property>
-            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[64, 16]"/>
-            </Property>
-            <Property name="name" type="java.lang.String" value="" noResource="true"/>
-            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[64, 16]"/>
-            </Property>
-            <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[64, 16]"/>
-            </Property>
-            <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="ltdOptions.getMainRailGap()" type="code"/>
-            </Property>
-          </Properties>
-          <Events>
-            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="mainRailGapSpinnerStateChanged"/>
-          </Events>
-        </Component>
         <Component class="javax.swing.JSpinner" name="sideRailGapSpinner">
           <Properties>
             <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
@@ -513,6 +487,32 @@
           </Properties>
           <Events>
             <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="sideRailGapSpinnerStateChanged"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JSpinner" name="mainRailGapSpinner">
+          <Properties>
+            <Property name="model" type="javax.swing.SpinnerModel" editor="org.netbeans.modules.form.editors2.SpinnerModelEditor">
+              <SpinnerModel initial="1" minimum="1" numberType="java.lang.Integer" stepSize="1" type="number"/>
+            </Property>
+            <Property name="toolTipText" type="java.lang.String" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="Bundle.getMessage(&quot;MainRailGapToolTip&quot;)" type="code"/>
+            </Property>
+            <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[64, 16]"/>
+            </Property>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
+            <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[64, 16]"/>
+            </Property>
+            <Property name="size" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+              <Dimension value="[64, 16]"/>
+            </Property>
+            <Property name="value" type="java.lang.Object" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+              <Connection code="ltdOptions.getMainRailGap()" type="code"/>
+            </Property>
+          </Properties>
+          <Events>
+            <EventHandler event="stateChanged" listener="javax.swing.event.ChangeListener" parameters="javax.swing.event.ChangeEvent" handler="mainRailGapSpinnerStateChanged"/>
           </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="railColorLabel">
