LayoutEditor:Add Check for... Anchors attached to Zero-Length Track Segments
Lots of FindBug fixes.
Minor dead-code stripping.
Minor bugfix for drawing LayoutSlip (crossing) diamond

--- a/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
+++ b/java/src/jmri/jmrit/display/layoutEditor/LayoutTrackDrawingOptionsDialog.form
@@ -7,9 +7,6 @@
   </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="2"/>
-    <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[512, 329]"/>
-    </Property>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[512, 329]"/>
     </Property>
@@ -51,14 +48,14 @@
           </Group>
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" max="-2" attributes="0"/>
-              <Component id="OptionsPanel" pref="506" max="32767" attributes="0"/>
+              <Component id="optionsPanel" pref="506" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
-              <Component id="OptionsPanel" min="-2" pref="288" max="-2" attributes="0"/>
+              <Component id="optionsPanel" min="-2" pref="288" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="presetsLabel" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -73,7 +70,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Container class="javax.swing.JPanel" name="OptionsPanel">
+    <Container class="javax.swing.JPanel" name="optionsPanel">
       <Properties>
         <Property name="border" type="javax.swing.border.Border" editor="org.netbeans.modules.form.editors2.BorderEditor">
           <Border info="org.netbeans.modules.form.compat2.border.TitledBorderInfo">
